--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/typst.png" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Cascadia+Mono:ital,wght@0,200..700;1,200..700&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap");
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Typst Compiler</title>
+    <title>Typst Editor</title>
   </head>
   <body>
     <div id="root"></div>
