--- a/src/a.html
+++ b/src/a.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
     <h3>Codemirror Language Support</h3>
-    <p><a href="https://github.com/codemirror/lang-javascript">javascript language support</a></p>
+    <p>
+      <a href="https://github.com/codemirror/lang-javascript"
+        >javascript language support</a
+      >
+    </p>
   </body>
 </html>
